--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="mercury">#EFEFEF</color>
     <color name="grayTv">#8D92A3</color>
+    <color name="mercuryLight">#E2E2E2</color>
+    <color name="lightGray">#EEECEDEE</color>
+    <color name="green">#1ABC9C</color>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="yellowLight">#FFBF00</color>
 </resources>
