--- a/app/src/main/res/layout/fragment_list_items.xml
+++ b/app/src/main/res/layout/fragment_list_items.xml
@@ -31,7 +31,7 @@
             style="@style/TextView.PoppinsNormal32sp020202"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FoodMarket "
+            android:text="Market "
             android:layout_marginTop="30dp"
             android:layout_marginLeft="24dp"
             app:layout_constraintStart_toStartOf="@id/header_cl"
@@ -42,7 +42,7 @@
             style="@style/EditText.PoppinsNormal14sp8D92A3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Let’s get some foods"
+            android:text="Let’s get some items"
             android:textColor="@color/grayTv"
             android:layout_marginLeft="24dp"
             app:layout_goneMarginTop="5dp"
