--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="mercury">#EFEFEF</color>
     <color name="grayTv">#8D92A3</color>
     <color name="mercuryLight">#E2E2E2</color>
+    <color name="cabaret">#D9435E</color>
     <color name="lightGray">#EEECEDEE</color>
     <color name="green">#1ABC9C</color>
     <color name="colorPrimary">#6200EE</color>
