--- a/app/src/main/res/layout/activity_detail_item.xml
+++ b/app/src/main/res/layout/activity_detail_item.xml
@@ -61,6 +61,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
         <TextView
+            android:id="@+id/detail_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cherry Healthy"
@@ -122,12 +123,25 @@
                 android:text="Total Price:"
                 style="@style/TextView.PoppinsNormal13sp8D92A3"/>
             <TextView
+                android:id="@+id/detail_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="170dp"
                 android:text="IDR 12.289.000"
-                style="@style/TextView.PoppinsNormal18sp020202"
+                style="@style/TextView.PoppinsNormal16sp020202"
                 android:textStyle="bold"/>
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/detail_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextView.PoppinsNormal14sp202020"
+            android:textColor="@color/black"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="1dp"
+            android:layout_marginEnd="2dp"
+            android:text=""/>
 
         <View
             android:layout_width="0dp"
@@ -149,21 +163,61 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@id/title_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextView.PoppinsNormal14sp202020"
+            android:textColor="@color/black"
+            android:text="Umkm"
+            android:layout_marginEnd="5dp"/>
+
+        <TextView
+            android:id="@+id/detail_umkm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextView.PoppinsNormal14sp202020"
+            android:textColor="@color/grayTv"
+            android:textStyle="normal"
+            android:text="name umkm"
+            android:layout_marginTop="5dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextView.PoppinsNormal14sp202020"
+            android:textColor="@color/black"
+            android:text="Category"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"/>
+
+        <TextView
+            android:id="@+id/detail_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextView.PoppinsNormal14sp202020"
+            android:textColor="@color/grayTv"
+            android:textStyle="normal"
+            android:text="Name category"
+            android:layout_marginTop="5dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/TextView.PoppinsNormal14sp202020"
             android:textColor="@color/black"
             android:text="Description"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"/>
 
         <TextView
+            android:id="@+id/detail_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/TextView.PoppinsNormal14sp202020"
