--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:tint="@color/yellowLight"
         tools:srcCompat="@drawable/ic_logo_apps" />
 
     <TextView
@@ -25,7 +26,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/yellowLight"
         android:textSize="25dp"
         android:text="Online Shop"
         app:layout_constraintEnd_toEndOf="parent"
