--- a/app/src/main/res/layout/activity_detail_item.xml
+++ b/app/src/main/res/layout/activity_detail_item.xml
@@ -33,74 +33,160 @@
             style="@style/TextView.PoppinsNormal20sp020202"/>
     </RelativeLayout>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/nav_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <me.relex.circleindicator.CircleIndicator
-        android:id="@+id/indicator"
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        app:layout_constraintBottom_toBottomOf="@id/viewpager"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:elevation="4dp"/>
+        app:layout_constraintBottom_toTopOf="@id/price_order_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="10dp">
 
-    <LinearLayout
-        android:id="@+id/title_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/viewpager"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-        <TextView
-            android:id="@+id/detail_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cherry Healthy"
-            style="@style/TextView.PoppinsNormal18sp020202"
-            android:textStyle="bold"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-        
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/minBtn"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/btn_min" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                app:layout_constraintTop_toBottomOf="@id/nav_view"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+            <me.relex.circleindicator.CircleIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                app:layout_constraintBottom_toBottomOf="@id/viewpager"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:elevation="4dp"/>
 
-            <TextView
-                android:id="@+id/total_items_text"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="1"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:layout_marginEnd="10dp" />
+            <LinearLayout
+                android:id="@+id/title_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/viewpager"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+                <TextView
+                    android:id="@+id/detail_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cherry Healthy"
+                    style="@style/TextView.PoppinsNormal18sp020202"
+                    android:textStyle="bold"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
 
-            <Button
-                android:id="@+id/plusBtn"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:background="@drawable/btn_add"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/minBtn"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/btn_min" />
+
+                    <TextView
+                        android:id="@+id/total_items_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="1"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="10dp" />
+
+                    <Button
+                        android:id="@+id/plusBtn"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:background="@drawable/btn_add"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/description_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toBottomOf="@id/title_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/TextView.PoppinsNormal14sp202020"
+                    android:textColor="@color/black"
+                    android:text="Umkm"
+                    android:layout_marginEnd="5dp"/>
+
+                <TextView
+                    android:id="@+id/detail_umkm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/TextView.PoppinsNormal14sp202020"
+                    android:textColor="@color/grayTv"
+                    android:textStyle="normal"
+                    android:text="name umkm"
+                    android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/TextView.PoppinsNormal14sp202020"
+                    android:textColor="@color/black"
+                    android:text="Category"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"/>
+
+                <TextView
+                    android:id="@+id/detail_category"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/TextView.PoppinsNormal14sp202020"
+                    android:textColor="@color/grayTv"
+                    android:textStyle="normal"
+                    android:text="Name category"
+                    android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/TextView.PoppinsNormal14sp202020"
+                    android:textColor="@color/black"
+                    android:text="Description"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"/>
+
+                <TextView
+                    android:id="@+id/detail_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/TextView.PoppinsNormal14sp202020"
+                    android:textColor="@color/grayTv"
+                    android:textStyle="normal"
+                    android:text="Makanan khas Bandung yang cukup sering dipesan oleh anak muda dengan pola makan yang cukup tinggi dengan mengutamakan diet yang sehat dan teratur. Makanan khas Bandung yang cukup sering dipesan oleh anak muda dengan pola makan yang cukup tinggi dengan mengutamakan diet yang sehat dan teratur.Makanan khas Bandung yang cukup sering dipesan oleh anak muda dengan pola makan yang cukup tinggi dengan mengutamakan diet yang sehat dan teratur.Makanan khas Bandung yang cukup sering dipesan oleh anak muda dengan pola makan yang cukup tinggi dengan mengutamakan diet yang sehat dan teratur."
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+
         </LinearLayout>
-        
-    </LinearLayout>
+
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/price_order_layout"
@@ -121,7 +207,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Total Price:"
-                style="@style/TextView.PoppinsNormal13sp8D92A3"/>
+                style="@style/TextView.PoppinsNormal14sp202020"/>
             <TextView
                 android:id="@+id/detail_price"
                 android:layout_width="wrap_content"
@@ -156,75 +242,6 @@
             android:textStyle="bold"
             style="@style/Button.Primary"
             android:textColor="@color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/description_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/title_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextView.PoppinsNormal14sp202020"
-            android:textColor="@color/black"
-            android:text="Umkm"
-            android:layout_marginEnd="5dp"/>
-
-        <TextView
-            android:id="@+id/detail_umkm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextView.PoppinsNormal14sp202020"
-            android:textColor="@color/grayTv"
-            android:textStyle="normal"
-            android:text="name umkm"
-            android:layout_marginTop="5dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextView.PoppinsNormal14sp202020"
-            android:textColor="@color/black"
-            android:text="Category"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"/>
-
-        <TextView
-            android:id="@+id/detail_category"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextView.PoppinsNormal14sp202020"
-            android:textColor="@color/grayTv"
-            android:textStyle="normal"
-            android:text="Name category"
-            android:layout_marginTop="5dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextView.PoppinsNormal14sp202020"
-            android:textColor="@color/black"
-            android:text="Description"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"/>
-
-        <TextView
-            android:id="@+id/detail_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextView.PoppinsNormal14sp202020"
-            android:textColor="@color/grayTv"
-            android:textStyle="normal"
-            android:text="Makanan khas Bandung yang cukup sering dipesan oleh anak muda dengan pola makan yang cukup tinggi dengan mengutamakan diet yang sehat dan teratur."
-            android:layout_marginTop="5dp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
